# TimeSorter

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  Dockerfile.serve  Makefile  README.md  pyproject.toml
configs/: dgx_4b.yaml  dgx_8b.yaml  dpo_4090_2x_4b.yaml  dpo_4090_2x_4b_v2.yaml  dpo_auto.yaml  dpo_auto_v2.yaml  dpo_dgx_4b.yaml  dpo_dgx_8b.yaml  dpo_final.yaml  dpo_rtx12g_4b.yaml  dpo_rtx12g_4b_v2.yaml  mac_smoke.yaml  mac_train.yaml  sft_4090_2x_4b.yaml  sft_4090_2x_4b_v2.yaml  sft_auto.yaml  sft_auto_v2.yaml  sft_dgx_4b.yaml  sft_dgx_8b.yaml  sft_mac.yaml  sft_mac_smoke.yaml  sft_rtx12g_4b.yaml  sft_rtx12g_4b_v2.yaml  sft_scheduler.yaml
data/: dpo_pairs.ckpt.jsonl  dpo_pairs.parquet  dpo_pairs_v2.parquet  events-scheduling.parquet  orca_ko_filtered_dpo.parquet  refusals_dpo_v2.parquet  refusals_sft_v2.parquet  scheduler_generic.parquet  scheduler_ko.parquet  scheduler_ko_combined.parquet  scheduler_nemotron_r2.parquet  scheduler_nemotron_r3.parquet  scheduler_nemotron_r4.parquet  scheduler_v2_combined.parquet  scheduler_v2_nemotron_extra.parquet  scheduler_v2_regen.parquet  xlam_ko_scheduled.parquet
docs/: BACKLOG.md  DATASET.md  DATASETS.md  SERVING.md  SETUP.md  TRAINING.md  TRAINING_LOG.md  VALIDATION.md  dataset_analysis.md  dataset_analysis_v2.md  schedule_result_v2.json  validation_result_v2.json
scripts/: analyze_dataset.py  convert_adapter_mlx.py  download_datasets.py  download_nemotron.py  email_to_schedule.py  gen_dataset_report.py  gen_korean_schedule.py  gen_nemotron_schedule.py  gen_preference_pairs.py  gen_schedule_v2.py  (+12 more)
(+107 files in other folders)
